--- a/.github/workflows/release-plugins.yaml
+++ b/.github/workflows/release-plugins.yaml
@@ -28,7 +28,15 @@ jobs:
           echo "Release branch: ${BRANCH}"
           GO111MODULE=off go get -u github.com/openshift-knative/hack/cmd/sobranch
           SO_RELEASE_NAME=$( $(go env GOPATH)/bin/sobranch --upstream-version "${BRANCH}") # input format: "release-v1.11" or "release-1.11" or "v1.11" or "1.11"
+          # SO_RELEASE_NAME will be something like "release-1.33"
           echo "SO_RELEASE_NAME: ${SO_RELEASE_NAME}"
+          # split the release name to get the version number
+          ## e.g. release-1.33 -> v1.33
+          BASE_RELEASE_VERSION=${SO_RELEASE_NAME#*-}
+          echo "BASE_RELEASE_VERSION: ${BASE_RELEASE_VERSION}"
+          DATE_TIME=$(date +"%Y%m%d%H%M%S")
+          RELEASE_NAME="${BASE_RELEASE_VERSION}.0-${DATE_TIME}"
+          echo "RELEASE_NAME: ${RELEASE_NAME}"
           echo "RELEASE_NAME=${SO_RELEASE_NAME}" >> $GITHUB_ENV
 
       - name: Setup Node.js
