--- a/.github/workflows/release-plugins.yaml
+++ b/.github/workflows/release-plugins.yaml
@@ -37,7 +37,7 @@ jobs:
           DATE_TIME=$(date +"%Y%m%d%H%M%S")
           RELEASE_NAME="${BASE_RELEASE_VERSION}.0-${DATE_TIME}"
           echo "RELEASE_NAME: ${RELEASE_NAME}"
-          echo "RELEASE_NAME=${SO_RELEASE_NAME}" >> $GITHUB_ENV
+          echo "RELEASE_NAME=${RELEASE_NAME}" >> $GITHUB_ENV
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
