--- a/.github/workflows/release-plugins.yaml
+++ b/.github/workflows/release-plugins.yaml
@@ -94,13 +94,16 @@ jobs:
           export PATH="./node_modules/.bin/:$PATH"
           yarn prepack
 
-      #      - name: Publish knative-event-mesh-backend plugin
-      #        uses: JS-DevTools/npm-publish@v2
-      #        if: github.event_name == 'push'
-      #        with:
-      #          token: ${{ secrets.NPM_TOKEN }}
-      #          access: public
-      #          package: backstage/plugins/knative-event-mesh-backend
+      - name: Publish knative-event-mesh-backend plugin
+        uses: JS-DevTools/npm-publish@v3
+        if: github.event_name == 'push'
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          access: public
+          package: backstage/plugins/knative-event-mesh-backend
+          registry: "https://npm.pkg.github.com"
+          tag: latest
+          dry-run: true
 
       - name: Postpack knative-event-mesh-backend plugin
         shell: bash
