--- a/.github/workflows/release-plugins.yaml
+++ b/.github/workflows/release-plugins.yaml
@@ -33,6 +33,7 @@ jobs:
           echo "Release branch: ${BRANCH}"
           
           cd /tmp
+          ls -laht
           go install github.com/openshift-knative/hack/cmd/sobranch@latest
           cd -
           SO_RELEASE_NAME=$( $(go env GOPATH)/bin/sobranch --upstream-version "${BRANCH}") # input format: "release-v1.11" or "release-1.11" or "v1.11" or "1.11"
